manifests/homelab/victoria-metrics/NetworkPolicy-dashboard-blackbox.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dashboard-blackbox
  namespace: victoria-metrics
spec:
  egress:
    - ports:
        - port: 80
          protocol: TCP
        - port: 443
          protocol: TCP
        - port: 2283
          protocol: TCP
        - port: 3000
          protocol: TCP
        - port: 5000
          protocol: TCP
        - port: 5800
          protocol: TCP
        - port: 8000
          protocol: TCP
        - port: 8080
          protocol: TCP
        - port: 8899
          protocol: TCP
      to:
        - namespaceSelector: {}
    - ports:
        - port: 8088
          protocol: TCP
        - port: 8501
          protocol: TCP
      to:
        - ipBlock:
            cidr: 192.168.1.225/32
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: vmagent
      ports:
        - port: 9115
          protocol: TCP
  podSelector:
    matchLabels:
      app: dashboard-blackbox
  policyTypes:
    - Ingress
    - Egress
